# TuPaX

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: make_video.sh  run_default.sh
src/gray_scott/: __init__.py  animate.py  compute.py
src/imex/: compute.py  reconstruct.py
src/tupax/: animate.py
tests/: test_import.py
