[build-system]
requires = ['hatchling>=1.25']
build-backend = 'hatchling.build'

[project]
name = 'tupax'
version = '1.0.0'
description ="""
Implements a discrete data assimilation algorithm for the Gray-Scott model,
built on a semi-implicit (IMEX) finite volume scheme.

The same IMEX solver can also compute direct numerical solutions of
the Gray-Scott system, which are used to generate synthetic data.
"""


readme = 'README.md'
requires-python = '>=3.11'
license = {text = 'Apache-2.0'}
authors = [
  {name  = 'Tsiry Avisoa Randrianasolo', email = 'trandria@math.uni-bielefeld.de'}
]
keywords = [
  'IMEX schemes',
  'data assimilation',
  'finite volume methods',
  'reaction-diffusion equations',
  'Gray-Scott model',
  'pattern formation',
  'FiPy'
]
dependencies = [
  'fipy>=4.0.1',
  'matplotlib>=3.6',
  'scipy>=1.10',
  'numpy>=1.26',
  'ffmpeg-python',
  'imageio[ffmpeg]',
  'pytest>=7.4'
]

[project.urls]
Homepage = 'https://github.com/trandriana/TuPaX'
Issues   = 'https://github.com/trandriana/TuPaX/issues'

[project.scripts]
imex-compute  = 'imex.compute:main'
imex-reconstruct  = 'imex.reconstruct:main'
tupax-animate  = 'tupax.animate:main'

[tool.hatch.build.targets.wheel]
packages = ['src/imex', 'src/tupax']

[tool.hatch.build.targets.sdist]
include = [
  'src/imex',
  'src/tupax',
  'README.md',
  'LICENSE',
  'CITATION.cff'
]
